# mirea-haskell-lectures

./: README.md
antego/: Challenge.hs  Core.hs  Homework2.hs
artem-kuznetsov/: Core.hs
artemy-urodovskikh/: Challenge.hs
chooh/: Challenge.hs  Magic.hs  Work03.hs
denis-gorshkov/: Core.hs
mikhail-fedin/: Core.hs  challenge.hs
milev-sergey/: Chalenge.hs  Core.hs
sergei-anisimov/: Challenge.hs
valera-antonov/: Challenge.hs
vladislav-zavialov/: Challenge.hs  Core.hs  CoreP.hs  Magic.hs  Parser.hs  YouTubeStream.hs
vladislav-zavialov/HelloWorld/: Main.hs  helloworld.cabal
vladislav-zavialov/HelloWorld/src/: HelloWorld.hs
